updated module files to align with other better checkout modules

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     },
     "require": {
-        "magento/framework": "*"
+        "magento/framework": "*",
+        "gene/module-better-checkout": "^1.0"
     },
     "require-dev": {
         "bitexpert/phpstan-magento": "^0.27",
