Remove private dependenices / stub out ppcp

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,6 +4,7 @@ parameters:
     paths:
         - .
     excludePaths:
+        - 'dev/composerstub'
         - 'vendor'
         - 'node_modules'
     ignoreErrors:
