--- a/composer.json
+++ b/composer.json
@@ -22,16 +22,16 @@
         "squizlabs/php_codesniffer": "^3.6",
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0"
     },
-    "repositories": [
-        {
+    "repositories": {
+        "magento": {
             "type": "composer",
-            "url": "https://repo.magento.com/"
+            "url": "https://mirror.mage-os.org/"
         },
-        {
-            "type": "composer",
-            "url": "https://repo.packagist.com/gene/"
+        "checkout": {
+            "type": "git",
+            "url": "https://github.com/genecommerce/module-better-checkout"
         }
-    ],
+    },
     "authors": [
         {
             "name": "",
