Begin rename to bluefinch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,4 +161,4 @@ workflows:
   build-test:
     jobs:
       - build:
-          context: checkout extension
+          context: bluefinch checkout extension
