renamed ppcp module from gene better checkout to bluefinch checkout

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,10 +81,10 @@ jobs:
             REPODIR=$(realpath ~/project)
             composer config "repositories.1" "{\"type\": \"path\", \"canonical\":true, \"url\": \"$REPODIR\", \"options\": {\"symlink\":false}}"
             composer config "repositories.2" "{\"type\": \"path\", \"canonical\":true, \"url\": \"$REPODIR/dev/composerstub/ppcp\"}"
-            composer config "repositories.3" "{\"type\": \"vcs\", \"url\": \"https://github.com/genecommerce/module-better-checkout\"}"
+            composer config "repositories.3" "{\"type\": \"vcs\", \"url\": \"https://github.com/bluefinchcommerce/module-checkout\"}"
             composer config minimum-stability dev
             composer config prefer-stable true
-            composer require gene/module-better-checkout-ppcp:dev-${CIRCLE_BRANCH} --no-interaction
+            composer require bluefinchcommerce/module-checkout-ppcp:dev-${CIRCLE_BRANCH} --no-interaction
       - run:
           name: Install Magento
           working_directory: ~/magento2
@@ -97,7 +97,7 @@ jobs:
             --db-password=root \
             --admin-firstname=Admin \
             --admin-lastname=User \
-            --admin-email=admin@gene.co.uk \
+            --admin-email=admin@bluefinchcommerce.co.uk \
             --admin-user=admin \
             --admin-password=password1 \
             --language=en_GB \
@@ -118,44 +118,44 @@ jobs:
           name: DI Compile
           command: php -d memory_limit=-1 bin/magento setup:di:compile
       - run:
-          working_directory: ~/magento2/vendor/gene/module-better-checkout-ppcp
+          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp
           name: Install composer modules within Better Checkout
           command: |
             composer install --no-interaction
       - run:
           name: PHPCS
-          working_directory: ~/magento2/vendor/gene/module-better-checkout-ppcp
+          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp
           command: |
             ./vendor/bin/phpcs . --standard=Magento2 --ignore=vendor,*.css,Test --extensions=php --colors -s -p -v --runtime-set installed_paths vendor/magento/magento-coding-standard,vendor/magento/php-compatibility-fork
       - run:
           name: PHPStan
-          working_directory: ~/magento2/vendor/gene/module-better-checkout-ppcp
+          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp
           command: ./vendor/bin/phpstan analyse . --configuration=./phpstan.neon
       - run:
           name: Configure PHPunit
-          working_directory: ~/magento2/vendor/gene/module-better-checkout-ppcp
+          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp
           command: |
             mkdir -p ~/phpunit
       - run:
           name: PHPUnit
-          working_directory: ~/magento2/vendor/gene/module-better-checkout-ppcp
+          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp
           command: ./vendor/bin/phpunit -c phpunit.xml
       - run:
           name: NPM install to root module
           working_directory: ~/magento2
-          command: npm --prefix vendor/gene/module-better-checkout-ppcp i
+          command: npm --prefix vendor/bluefinchcommerce/module-checkout-ppcp i
       - run:
           name: NPM install to checkout app
           working_directory: ~/magento2
-          command: npm --prefix vendor/gene/module-better-checkout-ppcp/view/frontend/web/js/checkout i
+          command: npm --prefix vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout i
       - run:
           name: ESLint run against root module
           working_directory: ~/magento2
-          command: npm --prefix vendor/gene/module-better-checkout-ppcp run lint
+          command: npm --prefix vendor/bluefinchcommerce/module-checkout-ppcp run lint
       - run:
           name: ESLint run against checkout app
           working_directory: ~/magento2
-          command: npm --prefix vendor/gene/module-better-checkout-ppcp/view/frontend/web/js/checkout run lint
+          command: npm --prefix vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout run lint
 
 workflows:
   build-test:
