--- a/view/frontend/web/js/checkout/package.json
+++ b/view/frontend/web/js/checkout/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gene-better-checkout-ppcp",
+  "name": "bluefinch-checkout-ppcp",
   "description": "",
   "main": "index.js",
   "type": "module",
