--- a/.github/workflows/generate-dist.yml
+++ b/.github/workflows/generate-dist.yml
@@ -30,6 +30,9 @@ jobs:
         run: |
           set -v
 
+
+          git clone https://x-access-token:${{ secrets.GH_PPCP_WEB_PAT }}@github.com/BlueFinchCommerce/ppcp-web.git 
+          
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PPCP_WEB_PAT }}" >> ~/.npmrc
           echo "@bluefinchcommerce:registry=https://npm.pkg.github.com/" >> ~/.npmrc
           
