--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,10 +141,10 @@ jobs:
           working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp
           command: ./vendor/bin/phpunit -c phpunit.xml
       - run:
-          name: Configure npm authentication
+          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp
+          name: Clone ppcp-web until it is made public
           command: |
-            echo "//npm.pkg.github.com/:_authToken=$GH_PAT" >> ~/.npmrc
-            echo "@bluefinchcommerce:registry=https://npm.pkg.github.com/" >> ~/.npmrc
+            git clone https://x-access-token:$GH_PAT@github.com/BlueFinchCommerce/ppcp-web.git
       - run:
           name: NPM install to root module
           working_directory: ~/magento2
