--- a/.github/workflows/generate-dist.yml
+++ b/.github/workflows/generate-dist.yml
@@ -39,7 +39,7 @@ jobs:
           git clone https://x-access-token:${{ secrets.GH_PPCP_WEB_PAT }}@github.com/BlueFinchCommerce/ppcp-web.git 
           
           rm package-lock.json  
-          npm i
+          npm i --verbose
           npm run build
           git add -f ./dist
 
