--- a/.github/workflows/generate-dist.yml
+++ b/.github/workflows/generate-dist.yml
@@ -38,8 +38,7 @@ jobs:
           echo "cloning ppcp-web until it is made public"
           git clone https://x-access-token:${{ secrets.GH_PPCP_WEB_PAT }}@github.com/BlueFinchCommerce/ppcp-web.git 
           
-        
-          npm i rollup-plugin-multi-input
+          npm i rollup
           npm i 
           npm run build
           git add -f ./dist
