--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,6 +146,10 @@ jobs:
           command: |
             git clone https://x-access-token:$GH_PAT@github.com/BlueFinchCommerce/ppcp-web.git
       - run:
+          name: Remove package-lick.json file
+          working_directory: ~/magento2
+          command: rm -rf vendor/bluefinchcommerce/module-checkout-ppcp/package-lock.json
+      - run:
           name: NPM install to root module
           working_directory: ~/magento2
           command: npm --prefix vendor/bluefinchcommerce/module-checkout-ppcp i
