--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,20 +146,6 @@ jobs:
           command: |
             git clone https://x-access-token:$GH_PAT@github.com/BlueFinchCommerce/ppcp-web.git
       - run:
-          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout/ppcp-web
-          name: npm link for ppcp-web
-          command: |
-            mkdir -p ~/.npm-global
-            npm config set prefix '~/.npm-global'
-            export PATH=~/.npm-global/bin:$PATH
-            npm link
-      - run:
-          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp
-          name: Link ppcp-web
-          command: |
-            export PATH=~/.npm-global/bin:$PATH
-            npm link ppcp-web     
-      - run:
           name: NPM install to root module
           working_directory: ~/magento2
           command: npm --prefix vendor/bluefinchcommerce/module-checkout-ppcp i
@@ -168,9 +154,9 @@ jobs:
           working_directory: ~/magento2
           command: npm --prefix vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout i
       - run:
-          name: Check installed dependencies
-          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp
-          command: npm list --depth=1
+          name: npm install ./ppcp-web
+          working_directory: ~/magento2
+          command: npm --prefix vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout install ./ppcp-web
       - run:
           name: ESLint run against checkout app
           working_directory: ~/magento2
