--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,10 +156,10 @@ jobs:
       - run:
           name: npm install ./ppcp-web
           working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout
-          command: npm install ../../ppcp-web
+          command: npm install ./ppcp-web
       - run:
           name: ESLint run against checkout app
-          working_directory: ~/magento2
+          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout
           command: npm --prefix vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout run lint
       - run:
           name: Run build for checkout app
