--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,10 +141,10 @@ jobs:
           working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp
           command: ./vendor/bin/phpunit -c phpunit.xml
       - run:
-          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp
-          name: Clone ppcp-web until it is made public
+          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout
+          name: Clone ppcp-web with verbose output
           command: |
-            git clone https://x-access-token:$GH_PAT@github.com/BlueFinchCommerce/ppcp-web.git
+            git clone --verbose https://x-access-token:$GH_PAT@github.com/BlueFinchCommerce/ppcp-web.git
       - run:
           name: NPM install to root module
           working_directory: ~/magento2
@@ -161,6 +161,15 @@ jobs:
           working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout/ppcp-web
           name: Debug Check - List Files
           command: ls -la
+      - run:
+          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout/ppcp-web
+          name: Debug Check - Show Hidden Files
+          command: ls -la
+      - run:
+          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout/ppcp-web
+          name: Check .gitignore
+          command: cat .gitignore || echo ".gitignore not found"
+
       - run:
           name: npm install ./ppcp-web
           working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout
