--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,15 +160,11 @@ jobs:
       - run:
           name: npm install ./ppcp-web
           working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout
-          command: npm install ./ppcp-web
-      - run:
-          working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout
-          name: Debug Check - Show Hidden Files In App
-          command: ls -la    
+          command: npm install ./ppcp-web   
       - run:
           name: ESLint run against checkout app
           working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout
-          command: npm --prefix vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout run lint
+          command: npm run lint
       - run:
           name: Run build for checkout app
           working_directory: ~/magento2
