changed package name for ppcp-web

--- a/.github/workflows/generate-dist.yml
+++ b/.github/workflows/generate-dist.yml
@@ -34,7 +34,7 @@ jobs:
 
           cd view/frontend/web/js/checkout/
           
-          echo "cloning ppcp-web until it is made public"
+          echo "cloning blufinch-ppcp-web until it is made public"
           git clone https://x-access-token:${{ secrets.GH_PPCP_WEB_PAT }}@github.com/BlueFinchCommerce/ppcp-web.git 
           
           npm i rollup
