--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,9 +142,9 @@ jobs:
           command: ./vendor/bin/phpunit -c phpunit.xml
       - run:
           working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout
-          name: Clone blufinch-ppcp-web
+          name: Clone bluefinch-ppcp-web
           command: |
-            git clone https://x-access-token:$GH_PAT@github.com/BlueFinchCommerce/ppcp-web.git blufinch-ppcp-web
+            git clone https://x-access-token:$GH_PAT@github.com/BlueFinchCommerce/ppcp-web.git bluefinch-ppcp-web
       - run:
           name: NPM install to root module
           working_directory: ~/magento2
@@ -154,9 +154,9 @@ jobs:
           working_directory: ~/magento2
           command: npm --prefix vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout i
       - run:
-          name: npm install ./blufinch-ppcp-web
+          name: npm install ./bluefinch-ppcp-web
           working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout
-          command: npm install ./blufinch-ppcp-web
+          command: npm install ./bluefinch-ppcp-web
       - run:
           name: ESLint run against checkout app
           working_directory: ~/magento2/vendor/bluefinchcommerce/module-checkout-ppcp/view/frontend/web/js/checkout
